# carob

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CREDITS.txt  LICENSE.txt  README.md
.builds/: freebsd-11.yml  freebsd-12.yml  freebsd-13.yml  freebsd.yml  netbsd-9.yml  netbsd.yml
.circleci/: config.yml
.github/workflows/: build.yml
data/: Info.plist  client.json
data/null-world/: null-area.json  null-player.json  null-tileset.json
src/: config.h  main.cpp  null-world.cpp
src/av/cocoa/: window.mm
src/av/gl/: images.cpp
src/av/gosu/: cbuffer.cpp  cbuffer.h  gosu.h  images.cpp  music.cpp  music.h  sounds.cpp  sounds.h  window.cpp  window.h
src/av/metal/: images.mm
src/av/null/: images.cpp  music.cpp  sounds.cpp  window.cpp
src/av/sdl2/: error.cpp  error.h  images.cpp  music.cpp  sdl2.h  sounds.cpp  window.cpp  window.h
src/cache/: cache-impl.h  cache.h  rc-cache-impl.h  rc-cache.h  rc-reader-cache.h
src/core/: algorithm.h  animation.cpp  animation.h  area-json.cpp  area-json.h  area.cpp  area.h  character.cpp  character.h  client-conf.cpp  client-conf.h  cooldown.cpp  cooldown.h  display-list.cpp  display-list.h  entity.cpp  entity.h  images.h  jsons-rapidjson.cpp  jsons-rapidjson.h  jsons.cpp  jsons.h  log.cpp  log.h  measure.cpp  measure.h  music-worker.h  music.cpp  music.h  npc.cpp  npc.h  overlay.cpp  overlay.h  player.cpp  player.h  resources.h  sounds.h  tile-grid.cpp  tile-grid.h  tile.cpp  (+9 more)
src/data/: action.cpp  action.h  data-area.cpp  data-area.h  data-world.h  inprogress-sound.h  inprogress-timer.h  inprogress.cpp  inprogress.h
src/demo/: main.cpp  world.cpp
src/net/: html.cpp  html.h  http.h  http_curl.cpp
src/os/: c.h  chrono.h  condition-variable.h  freebsd-c.h  io.h  linux-c.h  mac-c.h  mac-chrono.cpp  mac-gui.h  mac-gui.mm  mac-thread.cpp  mac-thread.h  mapped-file.h  memmove.cpp  mutex.h  netbsd-c.h  os.h  thread.h  unix-chrono.cpp  unix-condition-variable.h  unix-mapped-file.cpp  unix-mapped-file.h  unix-mutex.h  unix-thread.h  unix.cpp  windows-c.cpp  windows-c.h  windows-chrono.cpp  windows-condition-variable.h  windows-mapped-file.cpp  windows-mapped-file.h  windows-mutex.h  windows-thread.h  windows.cpp  windows.h
src/os/freebsd/: c.h
src/os/linux/: c.h  linux-c.h
src/os/mac/: c.h  chrono.cpp  dir.cpp  gui.mm  thread.cpp  thread.h
src/os/netbsd/: c.h
src/os/unix/: chrono.cpp  condition-variable.h  dir.cpp  io.cpp  io.h  mapped-file.cpp  mapped-file.h  mutex.h  thread.h  unix.cpp
src/os/windows/: c.cpp  c.h  chrono.cpp  condition-variable.h  io.cpp  io.h  mapped-file.cpp  mapped-file.h  mutex.h  thread.h  windows.cpp  windows.h
src/pack/: file-type.cpp  file-type.h  layout.h  main.cpp  pack-reader.cpp  pack-reader.h  pack-writer.cpp  pack-writer.h  ui-log.cpp  ui.h  walker.cpp  walker.h
src/resources/: pack.cpp
src/tiles/: animation.cpp  animation.h  area-json.cpp  area-json.h  area.cpp  area.h  character.cpp  character.h  client-conf.cpp  client-conf.h  cooldown.cpp  cooldown.h  display-list.cpp  display-list.h  entity.cpp  entity.h  images.h  jsons.cpp  jsons.h  log.cpp  log.h  main.cpp  measure.cpp  music-worker.h  music.cpp  music.h  npc.cpp  npc.h  null-world.cpp  overlay.cpp  overlay.h  player.cpp  player.h  resources.h  sounds.h  tile-grid.cpp  tile-grid.h  tile.cpp  tile.h  vec.cpp  (+7 more)
src/tools/bin2s/: main.cpp
src/util/: algorithm.h  align.h  arc.h  assert.cpp  assert.h  bitrecord.cpp  bitrecord.h  compiler.h  constexpr.h  cpu.cpp  cpu.h  endian.h  fnv.cpp  fnv.h  function.h  hash.cpp  hash.h  hashtable.h  hashvector.h  int.h  io.cpp  io.h  jobs.cpp  jobs.h  json.cpp  json.h  likely.h  list.h  markable.h  math2.h  measure.cpp  measure.h  memset.cpp  meta.h  move.h  new.cpp  new.h  noexcept.h  none.h  optional.h  (+18 more)
test/: main.cpp
test/util/: string-view.cpp  string2.cpp
